--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -21,7 +21,11 @@
         </li>
       </ul>
       <ul>
-        <li><button class="secondary">Log out</button></li>
+        <li>
+          <form action="/generate" method="POST" >
+            <button class="primary">Generate Daily Drive</button>
+          </form>
+        </li>
       </ul>
     </nav>
     <main class="container">
