--- a/app/views/home/setup.html.erb
+++ b/app/views/home/setup.html.erb
@@ -76,6 +76,11 @@
         <input type="number" value="5" name="split">
     </section>
 
+    <section>
+        <h5>At which time do you want the playlist to be generated everyday?</h5>
+        <input type="time" name="time">
+    </section>
+
     <input
         type="submit"
         value="Save changes"
