--- a/app/views/home/setup.html.erb
+++ b/app/views/home/setup.html.erb
@@ -77,7 +77,7 @@
     </section>
 
     <section>
-        <h5>At which time do you want the playlist to be generated everyday?</h5>
+        <h5>At which time (UTC) do you want the playlist to be generated everyday?</h5>
         <input type="time" name="time">
     </section>
 
