consider split_size and delte and recreate playlist when generating it

--- a/app/views/home/setup.html.erb
+++ b/app/views/home/setup.html.erb
@@ -27,7 +27,7 @@
                 <% @playlists.each do |playlist| %>
                     <li>
                         <label>
-                            <input type="radio" name="playlist" value="<%= playlist['id'] %>" <%= if @selected_playlists.include?(playlist['id']) then checked="checked" end  %> />
+                            <input type="checkbox" name="playlists[]" value="<%= playlist['id'] %>" <%= if @selected_playlists.include?(playlist['id']) then checked="checked" end  %> />
                             <%= playlist['name'] %>
                         </label>
                     </li>
