--- a/app/views/home/setup.html.erb
+++ b/app/views/home/setup.html.erb
@@ -59,12 +59,12 @@
 
      <section>
         <h5>After how many tracks would you like to listen to a show's episode?</h5>
-        <input type="number" value="<%= @split.value %>" name="split">
+        <input type="number" value="<%= @split %>" name="split">
     </section>
 
     <section>
         <h5>At which time (UTC) do you want the playlist to be generated everyday?</h5>
-        <input type="time" name="time" value="<%= @time_to_generate.value %>">
+        <input type="time" name="time" value="<%= @time_to_generate %>">
     </section>
 
     <input
