update login to sign in

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -13,3 +13,14 @@
  *= require_tree .
  *= require_self
  */
+
+ nav a {
+    text-decoration: none !important;
+    color: #fff;
+ }
+
+ /* #sign-in {
+   display: flex;
+   flex-direction: column;
+   justify-content: space-around;
+ } */
