--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html data-theme="dark">
   <head>
-    <title>Spotify Custom Daily Drive</title>
+    <title>Audio Pilot</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <%= csrf_meta_tags %>
@@ -11,26 +11,38 @@
     <%= javascript_importmap_tags %>
 
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@picocss/pico@2/css/pico.min.css" />
+    <%# <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-v4-grid-only@1.0.0/dist/bootstrap-grid.min.css" /> %>
   </head>
 
   <body>
     <nav class="container">
       <ul>
         <li>
-          <%= image_tag("spotify-logo.png", width: 200) %>
+          <a href="/"><strong>Audiopilot</strong></a>
         </li>
       </ul>
       <% if user_logged_in? %>
       <ul>
         <li>
-          <form action="/generate" method="POST" >
-            <button class="primary">Generate Daily Drive</button>
-          </form>
+          <a href="/logout">Sign out</a>
         </li>
       </ul>
       <% end %>
     </nav>
     <main class="container">
+      <% if flash[:info] %>
+        <article style="background-color:rgb(27, 78, 94); color: #fff">
+            <%= flash[:info] %>
+        </article>
+      <% elsif flash[:success] %>
+        <article style="background-color: #1b5e20; color: #fff">
+            <%= flash[:info] %>
+        </article>
+      <% elsif flash[:error] %>
+        <article style="background-color:rgb(94, 28, 27); color: #fff">
+            <%= flash[:info] %>
+        </article>
+      <% end %>
       <%= yield %>
     </main>
   </body>
