ref: save setup working

--- a/app/views/setup/index.html.erb
+++ b/app/views/setup/index.html.erb
@@ -50,7 +50,7 @@
 
      <section>
         <h5>After how many tracks would you like to listen to a show's episode?</h5>
-        <input type="number" value="<%= @playlist_config['split'] %>" name="split">
+        <input type="number" value="<%= @playlist_config['split_size'] %>" name="split_size">
     </section>
 
     <input
