ref: change title

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html data-theme="dark">
   <head>
-    <title>Audiopilot | Your favorite songs and podcasts to autopilot your day.</title>
+    <title>Audiopilot | Your favorite songs and podcasts on autopilot.</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <%= csrf_meta_tags %>
